Fix test compilation on JDK17 for #615